Размещены элементы на дополнительной activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Lesson 1</string>
-    <string name="full_name">ФИО:</string>
+    <string name="name">Наименование:</string>
 </resources>
