--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,10 @@
     <string name="decimal_separator">,</string>
     <string name="operator_minus">-</string>
     <string name="operator_plus">+</string>
-    <string name="operator_multiply">x</string>
-    <string name="operator_divide">/</string>
+    <string name="operator_multiply">×</string>
+    <string name="operator_divide">÷</string>
     <string name="operator_equal">=</string>
+    <string name="operator_drop">C</string>
+    <string name="operator_divide_modulo">%</string>
+    <string name="operator_change_sign">±</string>
 </resources>
