Задание 3: Большая часть функциональности реализована.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="number_8">8</string>
     <string name="number_9">9</string>
     <string name="number_0">0</string>
-    <string name="decimal_separator">,</string>
+    <string name="decimal_separator">.</string>
     <string name="operator_minus">-</string>
     <string name="operator_plus">+</string>
     <string name="operator_multiply">×</string>
